samples/_failures_safe/1761500185_ad070e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_524634b6.c: In function ‘find_shortest_path’:
./samples/SAFE/__tmp_524634b6.c:149:9: error: expected expression at end of input
  149 |         for (
      |         ^~~
./samples/SAFE/__tmp_524634b6.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_524634b6.c:149:9: error: expected declaration or statement at end of input
